add review route to swagger docs
